<resources>
    <string name="app_name">CampusCarRental</string>

    <string name="role_user">User</string>
    <string name="role_rental_manager">Rental Manager</string>
    <string name="role_admin">Admin</string>

    <!--Login-->
    <string name="title_login">Login</string>

    <string name="label_login_username">Username</string>
    <string name="label_login_password">Password</string>

    <string name="button_no_account">Don\'t have an account?</string>
    <string name="button_login_submit">Login</string>


    <!--    Signup-->
    <string name="title_signup">SignUp</string>
    <string name="txt_enteruername">Enter Username</string>
    <string name="txt_enterpassword">Enter Password</string>
    <string name="txt_utaid">Enter UTA ID</string>
    <string name="txt_firstname">First Name</string>
    <string name="txt_lastname">Last Name</string>
    <string name="txt_role">Select Role</string>
    <string-array name="txt_option_role">
        <item>@string/role_user</item>
        <item>@string/role_rental_manager</item>
        <item>@string/role_admin</item>
    </string-array>
    <string name="txt_Membership">Membership</string>
    <string name="txt_phone">Phone Number</string>
    <string name="txt_email">Email</string>
    <string name="txt_streetadd">Street Address</string>
    <string name="txt_city">City</string>
    <string name="txt_state">State</string>
    <string name="txt_hint_utaid">Enter your 8 digit UTA ID</string>
    <string name="txt_enrollmemb">Do you want to enroll for Membership ?</string>
    <!--    Home-->
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="logout_confirmation_yes">Yes</string>
    <string name="logout_confirmation_no">No</string>

    <string name="exit_confirmation_message">Are you sure you want to exit?</string>
    <string name="exit_confirmation_yes">Yes</string>
    <string name="exit_confirmation_no">No</string>

    <string name="welcome_message">Welcome, %1$s</string>
    <string name="txt_zip_code">Zip Code</string>

    <!--    Profile-->
    <string name="title_user_profile">Profile</string>
    <string name="txt_name">FULL NAME</string>
    <string name="txt_id">UTA ID</string>
    <string name="txt_usr_role">ROLE</string>
    <string name="txt_usr_member">MEMBER</string>
    <string name="txt_usr_email">EMAIL</string>
    <string name="txt_usr_phone">PHONE</string>
    <string name="txt_usr_address">ADDRESS</string>
    <string name="txt_usr_name">USERNAME</string>
    <string name="txt_usr_status">STATUS</string>

    <!--    User Home-->
    <string name="title_user_home">User Home</string>
    <string name="btn_view_profile">Profile</string>
    <string name="btn_update_profile">Update Profile</string>
    <string name="btn_search_car">Search Car</string>
    <string name="btn_view_car_details">Car Details</string>
    <string name="btn_request_rental">Request Rental</string>
    <string name="btn_my_reserv">My Reservations</string>
    <string name="btn_selec_reserv">Current</string>
    <string name="btn_cancel_reserv">Cancel</string>

    <!--    Search Car-->
    <string name="label_start">From</string>
    <string name="hint_start_date">From Date</string>
    <string name="hint_start_time">From Time</string>
    <string name="label_to">To:</string>
    <string name="hint_end_date">To Date</string>
    <string name="hint_end_time">To Time</string>
    <string name="btn_search_car_submit">Search Car</string>

    <!--    Search Car List Item-->
    <string name="car_item_capacity">Capacity: %1$d</string>
    <string name="car_item_starting_price">Starting from: $%1$.2f / day</string>

    <!--    Rental Manager Home-->
    <string name="title_rental_manager_home">Rental Manager Home</string>
    <string name="btn_list_of_available_cars">List of Available Cars</string>
    <string name="btn_list_of_reservations">List of Reservations</string>
    <string name="btn_rental_manager_profile">Profile</string>
    <string name="btn_logout">Logout</string>

    <!--    Admin Home-->
    <string name="btn_search_user">Search Users</string>
    <string name="title_admin_home">Admin Home</string>
    <string name="user_details_txt">User Details</string>
    <string name="name_txt">Name</string>
    <string name="uta_id">UTA ID</string>
    <string name="user_name">User Name</string>
    <string name="role">Role</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>

    <string-array name="edit_profile_role">
        <item>@string/role_user</item>
        <item>@string/role_rental_manager</item>
    </string-array>
    <string name="revoke_renter">Revoke Renter</string>
    <string name="change_role">Change user Role</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save_changes">Save Changes</string>

    <!--    Search Users-->
    <string name="search_label">Users</string>
    <string name="title_search_user">Search Users</string>
    <string name="reservation_number">Reservation Value</string>
    <string-array name="array_name">
        <item>@string/role_user</item>
        <item>@string/role_rental_manager</item>

    </string-array>


</resources>