<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:context=".RentalManagerHomeActivity">
    <TextView
        android:id="@+id/text_rm_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/welcome_message"/>
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_rm_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_rental_manager_profile" />

        <Button
            android:id="@+id/btn_available_cars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_list_of_available_cars"/>

        <Button
            android:id="@+id/btn_list_of_reservations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_list_of_reservations" />

        <Button
            android:id="@+id/btn_Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout" />

    </LinearLayout>

</RelativeLayout>