<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:context=".UserHomeActivity">
    <TextView
        android:id="@+id/text_user_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_user_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_view_profile"/>

        <Button
            android:id="@+id/btn_search_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_search_car" />

        <Button
            android:id="@+id/btn_reserves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_my_reserv" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout" />

    </LinearLayout>

</RelativeLayout>