<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/user_details_parent_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal|center_horizontal"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:paddingTop="20dp"
        android:padding="20dp">

        <TableLayout
            android:id="@+id/tableProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp" >

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="@string/user_name" />

                <TextView
                    android:id="@+id/profile_username"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_margin="4dp" />
            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                !-- text view for First Name -->

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/profile_firstName"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_margin="4dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/profile_lastName"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_margin="4dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="@string/uta_id" />

                <EditText
                    android:id="@+id/profile_utaId"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:gravity="left"
                    android:layout_margin="4dp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="@string/role" />

                <TextView
                    android:id="@+id/profile_role"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_marginTop="4dp" />
            </TableRow>

            <TableRow
                android:id="@+id/row_profile_membership"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:layout_margin="4dp"
                    android:text="Membership" />

                <ToggleButton
                    android:id="@+id/profile_membership"
                    android:textOn="YES"
                    android:textOff="NO"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="@string/phone_number" />

                <EditText
                    android:inputType="phone"
                    android:id="@+id/profile_phone"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_margin="4dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="@string/email" />

                <EditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/profile_email"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_margin="4dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                !-- text view for Street Addresss -->

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="Street Address" />

                <EditText
                    android:inputType="text"
                    android:id="@+id/profile_address"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_margin="4dp" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="@string/city" />

                <EditText
                    android:id="@+id/profile_city"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_margin="4dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                !-- text view for State -->

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="@string/state" />

                <EditText
                    android:id="@+id/profile_state"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_margin="4dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="@string/txt_zip_code" />

                <EditText
                    android:inputType="number"
                    android:id="@+id/profile_zip"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_margin="4dp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:text="Status" />

                <TextView
                    android:id="@+id/profile_status"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_margin="4dp" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/update_prof_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Update Profile" />
    </LinearLayout>
</ScrollView>
